minor fixes - fade animations on mobile

--- a/estilos/_animations.scss
+++ b/estilos/_animations.scss
@@ -5,13 +5,18 @@ section:not(.headboard) {
 
 .title--small {
     opacity: 0;
-    transition: all 50ms ease;
+    transition: all 100ms ease;
 }
 
-img:not(.logo, .brand-img),
+img:not(.logo),
 .btn:not(.btn-menu) {
     opacity: 0;
     transition: all 2000ms ease;
+}
+
+.brand-img {
+    opacity: 0;
+    transition: all 1000ms ease;
 }
 
 .title--small.active {
