--- a/estilos/index.css
+++ b/estilos/index.css
@@ -735,10 +735,10 @@ section:not(.headboard) {
 
 .title--small {
   opacity: 0;
-  transition: all 50ms ease;
+  transition: all 100ms ease;
 }
 
-img:not(.logo, .brand-img),
+img:not(.logo),
 .btn:not(.btn-menu),
 .btn--transparent:not(.btn-menu),
 body header .headboard .container .menuBar .menu .btn-menu:not(.btn-menu),
@@ -746,6 +746,11 @@ body main .banner .container .description .containerButton .btn-learn:not(.btn-m
 body main .banner .container .description .containerButton .btn-discord:not(.btn-menu) {
   opacity: 0;
   transition: all 2000ms ease;
+}
+
+.brand-img {
+  opacity: 0;
+  transition: all 1000ms ease;
 }
 
 .title--small.active {
